--- a/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING3_join_predicate_cases.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING3_join_predicate_cases.yaml
@@ -116,6 +116,7 @@ microbenchmark:
 
         executeRules:
             - workload: JOING3_1_join_on_pk_of_range_and_hash_tbl
+              customTags: customer=2
               run:
                   - name: join_on_pk_of_range_and_hash_tbl
                     weight: 100
@@ -124,6 +125,7 @@ microbenchmark:
 
 
             -   workload: JOING3_2_join_on_hashpk_IN_clause_1k
+                customTags: customer=6
                 run:
                     -   name: join_on_pk_of_range_and_hash_tbl
                         weight: 100
@@ -146,6 +148,7 @@ microbenchmark:
                                     params: [ 1, 1000000 ]
 
             -   workload: JOING3_4_join_on_rangepk_IN_clause_1k
+                customTags: customer=3
                 run:
                     -   name: join_on_pk_of_range_and_hash_tbl
                         weight: 100
@@ -168,6 +171,7 @@ microbenchmark:
                                     params: [ 1, 1000000 ]
 
             -   workload: JOING3_6_join_on_hashidx_IN_clause_10k
+                customTags: customer=1
                 run:
                     -   name: join_on_pk_of_range_and_hash_tbl
                         weight: 100
@@ -179,6 +183,7 @@ microbenchmark:
                                     params: [ 1, 1000000 ]
 
             -   workload: JOING3_7_join_on_rangeidx_IN_clause_10k
+                customTags: customer=2
                 run:
                     -   name: join_on_pk_of_range_and_hash_tbl
                         weight: 100
