--- a/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING5_to_test_data_cardinality.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING5_to_test_data_cardinality.yaml
@@ -128,6 +128,7 @@ microbenchmark:
         executeRules:
 
             - workload: JoinG5_1_1Mtbl_join_1Mtbl_two_conditions_indexscan_two_filters
+              customTags: customer=3
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
@@ -142,6 +143,7 @@ microbenchmark:
                         - query: select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card3_1 in (1000058);
 
             - workload: JoinG5_3_1Mtbl_join_1Mtbl_two_conditions_indexscan_two_filters
+              customTags: customer=7
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
@@ -158,6 +160,7 @@ microbenchmark:
 
 
             -   workload: JoinG5_5_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
+                customTags: customer=1
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
                         weight: 100
@@ -165,6 +168,7 @@ microbenchmark:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
 
             -   workload: JoinG5_6_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
+                customTags: customer=3
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
                         weight: 100
@@ -172,6 +176,7 @@ microbenchmark:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card3_1 in (1000058);
 
             -   workload: JoinG5_7_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
+                customTags: customer=8
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
                         weight: 100
