--- a/config/yugabyte/regression_pipelines/orderby_workloads/postgres/ORDG5_impact_of_datatype_with_sec_ind_desc.yaml
+++ b/config/yugabyte/regression_pipelines/orderby_workloads/postgres/ORDG5_impact_of_datatype_with_sec_ind_desc.yaml
@@ -200,6 +200,7 @@ microbenchmark:
                         params: [ 1, 500 ]
         executeRules:
             -   workload: ORDG5_ordby_bigint_indexed_column_desc
+                customTags: customer=2
                 run:
                     -   name: ordby_bigint_indexed_column_desc
                         weight: 100
