--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG10_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG10_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
@@ -79,6 +79,7 @@ microbenchmark:
         executeRules:
 
             - workload: INDG10_1_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_first_part_hash_1M
+              customTags: customer=2
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
@@ -93,6 +94,7 @@ microbenchmark:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card2_1=1000498
 
             - workload: INDG10_4_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k_two_conditions
+              customTags: customer=1
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
@@ -100,6 +102,7 @@ microbenchmark:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1=1000498
 
             - workload: INDG10_5_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
+              customTags: customer=2
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
