--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG6_sec_index_range_tbl_point_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG6_sec_index_range_tbl_point_selects_indexscan.yaml
@@ -65,6 +65,7 @@ microbenchmark:
 
 
             - workload: INDG6_1_rangetbl_point_lookup_index_scan_using_comp_range_skey_first_part_range
+              customTags: customer=1
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
@@ -79,6 +80,7 @@ microbenchmark:
                         - query: select * from Rangetbl_1 where col_bigint_id_4=500009
 
             - workload: INDG6_3_rangetbl_point_lookup_index_scan_using_comp_skey_two_conditions_range
+              customTags: customer=5
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
