--- a/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG4_impact_of_distinct_on_increasing_row.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG4_impact_of_distinct_on_increasing_row.yaml
@@ -143,6 +143,7 @@ microbenchmark:
                       params: [1, 500]
         executeRules:
             - workload: AGGRG4_distinct_bigint_1L_table_rows
+              customTags: customer=1
               run:
                   - name: pg_distinct_bigint_non_indexed_column
                     weight: 100
@@ -155,6 +156,7 @@ microbenchmark:
                     queries:
                         - query: select distinct(col_bigint_id_1) from pkeyBigint1M_1
             - workload: AGGRG4_distinct_bigint_10M_table_rows
+              customTags: customer=2
               run:
                   - name: pg_distinct_bigint_10M_table_rows
                     weight: 100
