--- a/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG5_impact_of_max_on_increasing_row.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG5_impact_of_max_on_increasing_row.yaml
@@ -143,6 +143,7 @@ microbenchmark:
                       params: [1, 500]
         executeRules:
             - workload: AGGRG5_max_bigint_1L_table_rows
+              customTags: customer=2
               run:
                   - name: pg_distinct_bigint_non_indexed_column
                     weight: 100
