--- a/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG7_filter_condition_index_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG7_filter_condition_index_type_impact.yaml
@@ -72,18 +72,21 @@ microbenchmark:
 
         executeRules:
             - workload: AGGRG7_count_bigint_non_indexed_column_with_filter_condition
+              customTags: customer=2
               run:
                   - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
                     queries:
                         - query: select count(col_bigint_id_3) from Indexed1M_1 where col_bigint_id_3>1
             - workload: AGGRG7_count_bigint_pkey_column_with_filter_condition
+              customTags: customer=2
               run:
                   - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
                     queries:
                         - query: select count(col_bigint_id_1) from Indexed1M_1 where col_bigint_id_1>1
             - workload: AGGRG7_count_bigint_secondary_indexed_column_with_filter_condition
+              customTags: customer=2
               run:
                   - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
