--- a/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG9_aggregates_on_hash_partitioned_table.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/postgres/AGGRG9_aggregates_on_hash_partitioned_table.yaml
@@ -104,12 +104,14 @@ microbenchmark:
                     queries:
                         - query: select count(col_bigint_id_2) from Indexed1M_1 where col_bigint_id_2>1
             -   workload: AGGRG9_count_bigint_range_secondary_indexed_column
+                customTags: customer=1
                 run:
                     -   name: count_bigint_non_indexed_column
                         weight: 100
                         queries:
                             -   query: select count(col_bigint_id_4) from Indexed1M_1
             -   workload: AGGRG9_count_bigint_range_secondary_indexed_column_with_filter
+                customTags: customer=1
                 run:
                     -   name: count_bigint_non_indexed_column
                         weight: 100
