--- a/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING7_pkey_rangescan_join.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING7_pkey_rangescan_join.yaml
@@ -78,18 +78,21 @@ microbenchmark:
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<2;
             - workload: JoinG7_pkey_rangescan_join_fetch_10row
+              customTags: customer=4
               run:
                   - name: pkey_rangescan_join_fetch_10row_test
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<11;
             - workload: JoinG7_pkey_rangescan_join_fetch_1000row
+              customTags: customer=6
               run:
                   - name: pkey_rangescan_join_fetch_1000row_test
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<1001;
             - workload: JoinG7_pkey_rangescan_join_fetch_100000row
+              customTags: customer=1
               run:
                   - name: pkey_rangescan_join_fetch_100000row_test
                     weight: 100
