--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG1_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG1_hash_pointlookup_primarykey_vs_index.yaml
@@ -106,12 +106,14 @@ microbenchmark:
                     params: [500, 500]
         executeRules:
             - workload: scanG1_pkey_hash_point_lookup
+              customTags: customer=8
               run:
                   - name: pkey_hash_point_lookup_test
                     weight: 100
                     queries:
                         - query: select col_bigint_id_1 from pkey_hash_point_lookup_tbl_1 where col_bigint_id_1=500009
             - workload: scanG1_indx_hash_point_lookup
+              customTags: customer=6
               run:
                   - name: indx_hash_point_lookup_test
                     weight: 100
