--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG4_pkey_rangeScan_INclause_increasingRows_.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG4_pkey_rangeScan_INclause_increasingRows_.yaml
@@ -90,6 +90,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG4_pkey_INclause_rangescan_increasing_rows_100row
+              customTags: customer=1
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_100row_test
                     weight: 100
@@ -100,6 +101,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG4_pkey_INclause_rangescan_increasing_rows_1000row
+              customTags: customer=1
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_1000row_test
                     weight: 100
@@ -110,6 +112,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG4_pkey_INclause_rangescan_increasing_rows_10000row
+              customTags: customer=1
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_10000row_test
                     weight: 100
