--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW3_select_for_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW3_select_for_update.yaml
@@ -37,7 +37,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS CW3_accounts_2;
 
         loadRules:
-            -   table: accounts_
+            -   table: CW3_accounts_
                 count: 2
                 rows: 2000000
                 columns:
